arc: Fix default ARC app icons are not loaded.

This fix the issue when default ARC app icons are not loaded in case
of provisioning is not finished for new user flow.

Test: Manually + unit_test
Bug: 833596
Change-Id: I99af81eafb78c65857b6fe5a6475d3372e08beb5
Reviewed-on: https://chromium-review.googlesource.com/1014326
Commit-Queue: Yury Khmel <khmel@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551182}
Former-commit-id: aa4e005ad4fd58ee383c7bea32512af7252ec456